# emmett

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
example_configs/: full.conf  full.toml
example_configs/input/: stdin.conf
src/: .#main.rs  bin.rs  config.rs  filters.rs  inputs.rs  lib.rs  logstash.pest  main.rs  mod.rs  pipeline.rs
src/filters/: bytes.rs  clone.rs  date.rs  fingerprint.rs  geoip.rs  grok.rs  json.rs  mod.rs  mutate.rs  prune.rs
src/input/: .#azure_event_hubs.rs  beats.rs  exec.rs  generator.rs  http.rs
src/inputs/: azure_event_hubs.rs  beats.rs  cloudwatch.rs  couchdb_changes.rs  dead_letter_queue.rs  elasticsearch.rs  exec.rs  file.rs  ganglia.rs  gelf.rs  generator.rs  github.rs  google_cloud_storage.rs  google_pubsub.rs  graphite.rs  heartbeat.rs  http.rs  http_poller.rs  imap.rs  irc.rs  jdbc.rs  jms.rs  jmx.rs  kafka.rs  kinesis.rs  lumberjack.rs  meetup.rs  mod.rs  pipe.rs  puppett_facter.rs  rabbitmq.rs  redis.rs  relp.rs  rss.rs  s3.rs  salesforce.rs  snmp.rs  snmptrap.rs  sqlite.rs  sqs.rs  (+11 more)
src/output/: elasticsearch.rs  mod.rs
src/outputs/: csv.rs  datadog.rs  elasticsearch.rs  mod.rs  stdout.rs
src/pipeline/: filters.rs  inputs.rs  outputs.rs
src/pipeline/filters/: date.rs  fingerprint.rs  geoip.rs  json.rs  mutate.rs  prune.rs
src/pipeline/inputs/: azure_event_hubs.rs  beats.rs  dead_letter_queue.rs  exec.rs  file.rs  generator.rs  http_poller.rs  s3.rs  sqs.rs  stdin.rs
src/pipeline/outputs/: csv.rs  datadog.rs  stdout.rs
src/plugins/: .#mod.rs  mod.rs
src/plugins/filter/: clone.rs  date.rs  geoip.rs  mod.rs  mutate.rs
src/plugins/input/: .#http_poller.rs  azure_event_hubs.rs  exec.rs  generator.rs  http_poller.rs  mod.rs  s3.rs
src/plugins/output/: mod.rs  stdout.rs
