[package]
authors = ["Andrew Banchich <andrewbanchich@gmail.com>"]
edition = "2018"
name = "emmett"
version = "0.1.0"

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
url = "1.7.2"
tokio = "0.1.18"
futures = "0.1.26"
reqwest = "0.9.15"
serde = "1.0.90"
serde_json = "1.0.39"
rusoto_core = "0.38.0"
rusoto_s3 = "0.38.0"
rusoto_credential = "0.17.0"
structopt = "0.2.15"
log = "0.4.6"
env_logger = "0.6.1"
http = "0.1.17"
crossbeam-channel = "0.3.8"
tokio-process = "0.2.3"
sha1 = "0.6.0"
