[package]
authors = ["Andrew Banchich <andrewbanchich@gmail.com>"]
edition = "2018"
name = "emmett"
version = "0.1.0"

[dependencies]
url = "1.7.2"
tokio = "0.1.20"
futures = "0.1.27"
reqwest = "0.9.17"
serde = "1.0.91"
serde_json = "1.0.39"
rusoto_core = "0.39.0"
rusoto_s3 = "0.39.0"
rusoto_credential = "0.39.0"
http = "0.1.17"
crossbeam-channel = "0.3.8"
tokio-process = "0.2.3"
sha1 = "0.6.0"
toml = "0.5.1"
log = "0.4.6"
env_logger = "0.6.1"
