[package]
description = "a simple etl tool"
authors = ["Andrew Banchich <andrewbanchich@gmail.com>"]
edition = "2018"
name = "emmett"
version = "0.1.3-alpha"
license = "GPL-3.0-or-later"
homepage = "https://gitlab.com/andrewbanchich/emmett"
repository = "https://github.com/andrewbanchich/emmett"
readme = "README.md"
keywords = ["ETL", "Logstash", "data", "logs"]
categories = ["parsing"]

[badges]
gitlab = { repository = "andrewbanchich/emmett" }

[lib]
name = "emmett"
path = "src/lib.rs"

[[bin]]
name = "emmett"
path = "src/bin.rs"

[dependencies]
url = "1.7.2"
tokio = "0.1.20"
futures = "0.1.27"
reqwest = "0.9.17"
serde = "1.0.91"
serde_json = "1.0.39"
rusoto_core = "0.39.0"
rusoto_s3 = "0.39.0"
rusoto_credential = "0.39.0"
http = "0.1.17"
sha1 = "0.6.0"
toml = "0.5.1"
